<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul_solo" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="34dp"
        android:text="@string/b1" />

    <RadioGroup
        android:id="@+id/radio_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_20_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb1" />

        <RadioButton
            android:id="@+id/radio_20_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb11" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radio_20"
        android:layout_marginLeft="21dp"
        android:text="@string/b2" />

    <RadioGroup
        android:id="@+id/radio_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2" >

        <RadioButton
            android:id="@+id/radio_21_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb2" />

        <RadioButton
            android:id="@+id/radio_21_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb22" />

        <RadioButton
            android:id="@+id/radio_21_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb23" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/radio_21"
        android:layout_marginTop="29dp"
        android:text="@string/b3" />

    <RadioGroup
        android:id="@+id/radio_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_22_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb31" />

        <RadioButton
            android:id="@+id/radio_22_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb32" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/radio_22"
        android:layout_marginTop="21dp"
        android:text="@string/b4" />

    <RadioGroup
        android:id="@+id/radio_23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4" >

        <RadioButton
            android:id="@+id/radio_23_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb41" />

        <RadioButton
            android:id="@+id/radio_23_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb42" />

        <RadioButton
            android:id="@+id/radio_23_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb43" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/radio_23"
        android:layout_marginTop="23dp"
        android:text="@string/b5" />

    <RadioGroup
        android:id="@+id/radio_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/radio_24_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb51" />

        <RadioButton
            android:id="@+id/radio_24_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb52" />

        <RadioButton
            android:id="@+id/radio_24_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb53" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/radio_24"
        android:layout_marginTop="23dp"
        android:text="@string/b6" />

    <RadioGroup
        android:id="@+id/radio_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" >

        <RadioButton
            android:id="@+id/radio_25_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb61" />

        <RadioButton
            android:id="@+id/radio_25_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb62" />

        <RadioButton
            android:id="@+id/radio_25_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb63" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/radio_25"
        android:layout_marginTop="33dp"
        android:text="@string/b7" />

    <RadioGroup
        android:id="@+id/radio_26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="23dp" >

        <RadioButton
            android:id="@+id/radio_26_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb71" />

        <RadioButton
            android:id="@+id/radio_26_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb72" />

        <RadioButton
            android:id="@+id/radio_26_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb73" />

        <RadioButton
            android:id="@+id/radio_26_opcion_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb74" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/radio_26"
        android:text="@string/b8" />

    <RadioGroup
        android:id="@+id/radio_27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView8" >

        <RadioButton
            android:id="@+id/radio_27_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/b81" />

        <RadioButton
            android:id="@+id/radio_27_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b82" />

        <RadioButton
            android:id="@+id/radio_27_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b83" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView8"
        android:layout_below="@+id/radio_27"
        android:text="@string/b9" />
    
     <RadioGroup
         android:id="@+id/radio_28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView9" >

        <RadioButton
            android:id="@+id/radio_28_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/b91" />

        <RadioButton
            android:id="@+id/radio_28_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b92" />

        <RadioButton
            android:id="@+id/radio_28_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b93" />
    </RadioGroup>
    
      <TextView
          android:id="@+id/textView10"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/textView9"
          android:layout_below="@+id/radio_28"
          android:text="@string/b10"
           />
      
       <RadioGroup
           android:id="@+id/radio_29"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/textView10" >

        <RadioButton
            android:id="@+id/radio_29_opcion_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/resb101" />

        <RadioButton
            android:id="@+id/radio_29_opcion_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb102" />

        <RadioButton
            android:id="@+id/radio_29_opcion_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resb103" />
    </RadioGroup>

       
        <Button
          android:id="@+id/siguiente_barthel_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignTop="@+id/textView10"
          android:layout_marginLeft="18dp"
          android:layout_below = "@+id/radio_29" 
          android:text="@string/siguiente" />
        
        <Button
          android:id="@+id/abortar_barthel_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/radio_29"
          android:layout_marginLeft="55dp"
          android:layout_toRightOf="@+id/siguiente_barthel_button"
          android:text="@string/Abortar" />
        
</RelativeLayout>