<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul_solo"
    tools:ignore="Overdraw,UnusedResources" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="56dp"
        android:text="@string/mini17" />

    <CheckBox
        android:id="@+id/checkBox46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="57dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/mini17R" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/checkBox46"
        android:layout_marginTop="35dp"
        android:text="@string/mini18" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="39dp"
        android:text="@string/mini18R1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="42dp"
        android:text="@string/mini18R2" />

    <CheckBox
        android:id="@+id/checkBox47_opcion_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox46"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginLeft="39dp"
        android:text="@string/Res" />

    <CheckBox
        android:id="@+id/checkBox47_opcion_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/checkBox47_opcion_01"
        android:text="@string/Res" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/checkBox47_opcion_02"
        android:layout_marginTop="29dp"
        android:text="@string/mini18R3" />

    <CheckBox
        android:id="@+id/checkBox47_opcion_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/checkBox47_opcion_02"
        android:text="@string/Res" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/checkBox47_opcion_03"
        android:layout_marginTop="29dp"
        android:text="@string/mini19" />

    <CheckBox
        android:id="@+id/checkBox48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginLeft="57dp"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/mini19R" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/checkBox48"
        android:layout_marginTop="22dp"
        android:text="@string/mini20" />

    <CheckBox
        android:id="@+id/checkBox49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView49"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/Res" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView49"
        android:layout_below="@+id/checkBox49"
        android:layout_marginTop="37dp"
        android:text="@string/mini21" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="50dp"
        android:src="@drawable/pre21"
        tools:ignore="ContentDescription" />

    <CheckBox
        android:id="@+id/checkBox50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/checkBox46"
        android:text="@string/Res" />

    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="138dp"
        android:layout_toLeftOf="@+id/checkBox47_opcion_01"
        android:text="@string/fin" />

    <Button
        android:id="@+id/btn_abortar_mini_segundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_finalizar"
        android:layout_alignBottom="@+id/btn_finalizar"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/Abortar" />

</RelativeLayout>